--- a/tool/dactyl-config.yml
+++ b/tool/dactyl-config.yml
@@ -53,6 +53,8 @@ targets:
             "img/noripple-04.png": https://ripple.com/wp-content/uploads/2015/01/noripple-04.png
             "img/noripple-05.png": https://ripple.com/wp-content/uploads/2015/01/noripple-05.png
             "img/noripple-06.png": https://ripple.com/wp-content/uploads/2015/01/noripple-06.png
+        template: template-contentonly.html
+        pdf_template: template-contentonly.html
 
     -   name: rippled-setup
         filters:
